k8s/app/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: taskapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 292828418167.dkr.ecr.eu-north-1.amazonaws.com/taskapp-backend:v1
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: 526Mi
            cpu: 200m
          limits:
            memory: 526Mi
            cpu: 500m
        livenessProbe:
          httpGet:
            path: /api/health
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/health
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: taskapp
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 5000
